# dnc_automator

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT_GUIDE.md  DEVLOG.md  GOOGLE_DRIVE_SETUP_GUIDE.md  README.md  SESSION_2_PLAN.md  pyproject.toml  test_dnc_logic.py
.github/workflows/: dnc-automation.yml  dnc_automation.yml  pr-validation.yml  release-deploy.yml
config/: .gitkeep
planning_docs/: getting_started.md  high_level_plan.md
src/: main.py
src/core/: config.py  dnc_logic.py
src/hubspot/: client.py
src/notifications/: email_sender.py
src/utils/: file_handler.py  google_drive_client.py  logger.py  validators.py
tests/: conftest.py
tests/unit/: test_dnc_logic.py
